--- a/morgan_freeman/index.html
+++ b/morgan_freeman/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Stars !</title>
+    <title>Morgan Freeman</title>
+    <div bandeau><h1>StarBio</h1></div>
+
 </head>
 <body>
     <h1>Morgan Freeman</h1>
