création des menus déroulants et modif de chaque page

--- a/morgan_freeman/index.html
+++ b/morgan_freeman/index.html
@@ -10,7 +10,13 @@
 
 </head>
 <body>
-    <h1>Morgan Freeman</h1>
+    <div bandeau><h1>StarBio</h1></div>
+    <div><h2>Découvrez le visage de vos stars favorites</h2></div>
+    <a href="morgan_freeman/bio_perso.html">Biographie personelle</a>
+    <a href="morgan_freeman/bio_pro.html">Biographie professionnelle</a>
+    <a href="morgan_freeman/liste_oeuvres.html">Ses oeuvres</a>
+    <a href="morgan_freeman/galerie.html">Galerie de photos</a>
+    <h2>Morgan Freeman</h2>
     <div>
         <h2>Biographie personelle</h2>
         <p>Morgan Freeman est un acteur, réalisateur et producteur de cinéma américain. Il est né le 1er juin 1937 (83 ans), à Memphis  aux États-Unis dans une fratrie de quatre enfants. Ses parents sont Mayme Edna Revere (1912-2000) et Morgan Porterfield Freeman (1915-1961), ancien combattant de la Seconde Guerre mondiale2, mort d'une cirrhose du foie lorsqu'il a 46 ans. C’est sa grand-mère qui l’élève, dans le Mississippi, il y passera toute son enfance, jusqu’à la mort de celle-ci.
