--- a/morgan_freeman/liste_oeuvres.html
+++ b/morgan_freeman/liste_oeuvres.html
@@ -4,11 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+
     <title>Ses oeuvres</title>
-    <div bandeau><h1>StarBio</h1></div>
 
 </head>
 <body>
+    <a href="../accueil.html"><h1>StarBio</h1></a>
+    <div><h2>Oeuvres</h2></div>
+    <!-- <a href="bio_perso.html">Biographie personelle</a>
+    <a href="bio_pro.html">Biographie professionnelle</a>
+    <a href="liste_oeuvres.html">Ses oeuvres</a>
+    <a href="galerie.html">Galerie de photos</a> -->
+
+    <nav> <!-- /*menu déroulant*/ -->
+        <ul>
+          <li class="menu-deroulant">
+            <a href="#">Morgan Freeman</a>
+            <ul class="sous-menu">
+              <li><a href="bio_perso.html">Biographie personelle</a></li>
+              <li><a href="bio_pro.html">Biographie professionnelle</a></li>
+              <li><a href="liste_oeuvres.html">Oeuvres </a></li>
+              <li><a href="galerie.html">Galerie</a></li>
+            </ul>
+          </li>
+          <li class="menu-deroulant">
+            <a href="#">Melissa</a>
+            <ul class="sous-menu">
+              <li><a href="#">Bio</a></li>
+              <li><a href="#">Vie</a></li>
+            </ul>
+          </li>
+          <!-- <li><a href="#">À propos</a></li>
+          <li><a href="#">Contactez-nous</a></li> -->
+        </ul>
+      </nav>
+
     <h2>Liste d'oeuvres</h2>
         <p>Morgan Freeman a joué dans plus d'une centaine de films, la liste de ses œuvres est donc non exhaustive, mais traite une partie des œuvres les plus célèbres.  
         </p>
