ajout photo galerie morgan

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
-    <link rel="stylesheet" href="morgan_freeman/style.css">
+    <link rel="stylesheet" href="style.css">
 
 
 </head>
 
 <body>
-    <a href="accueil.html"><h1>StarBio</h1></a>
+    <a href="index.html"><h1>StarBio</h1></a>
     <div><h2>Découvrez le visage de vos stars favorites</h2></div>
     <!-- <a href="morgan_freeman/bio_perso.html">Biographie personelle</a>
     <a href="morgan_freeman/bio_pro.html">Biographie professionnelle</a>
