--- a/morgan_freeman/galerie.html
+++ b/morgan_freeman/galerie.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 
     <title>Galerie</title>
 
 </head>
 <body>
-    <a href="../accueil.html"><h1>StarBio</h1></a>
+    <a href="../index.html"><h1>StarBio</h1></a>
     <div><h2>Galerie</h2></div>
     <!-- <a href="bio_perso.html">Biographie personelle</a>
     <a href="bio_pro.html">Biographie professionnelle</a>
@@ -39,6 +39,18 @@
           <li><a href="#">Contactez-nous</a></li> -->
         </ul>
       </nav>
-    
+
+      <div class="game-board">
+        <div class="box"><a href="./img/morgan1.jpg"><img src="./img/morgan1mini.jpg" alt="morgan1mini"></a></div>
+        <div class="box"><a href="./img/morgan2.jpg"><img src="./img/morgan2mini.jpg" alt="morgan2mini"></a></div>
+        <div class="box"><a href="./img/morgan3.jpg"><img src="./img/morgan3mini.jpg" alt="morgan3mini"></a></div>
+        <div class="box"><a href="./img/morgan4.jpg"><img src="./img/morgan4mini.jpg" alt="morgan4mini"></a></div>
+        <div class="box"><a href="./img/morgan5.jpg"><img src="./img/morgan5mini.jpg" alt="morgan5mini"></a></div>
+        <div class="box"><a href="./img/morgan6.jpg"><img src="./img/morgan6mini.jpg" alt="morgan6mini"></a></div>
+        <div class="box"><a href="./img/morgan7.jpg"><img src="./img/morgan7mini.jpg" alt="morgan7mini"></a></div>
+        <div class="box"><a href="./img/morgan8.jpg"><img src="./img/morgan8mini.jpg" alt="morgan8mini"></a></div>
+        <div class="box"><a href="./img/morgan9.jpg"><img src="./img/morgan9mini.jpg" alt="morgan9mini"></a></div>
+
+      </div>
 </body>
 </html>
