modif de ma gallerie morgan et modif du css root

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 </head>
 
 <body>
+  <div class="bandeau">
     <a href="index.html"><h1>StarBio</h1></a>
     <div><h2>Découvrez le visage de vos stars favorites</h2></div>
+  </div>
+    <!-- <a href="index.html"><h1>StarBio</h1></a>
+    <div><h2>Découvrez le visage de vos stars favorites</h2></div> -->
     <!-- <a href="morgan_freeman/bio_perso.html">Biographie personelle</a>
     <a href="morgan_freeman/bio_pro.html">Biographie professionnelle</a>
     <a href="morgan_freeman/liste_oeuvres.html">Ses oeuvres</a>
