--- a/morgan_freeman/galerie.html
+++ b/morgan_freeman/galerie.html
@@ -40,16 +40,23 @@
         </ul>
       </nav>
 
+      <!-- galerie photos -->
       <div class="game-board">
-        <div class="box"><a href="./img/morgan1.jpg"><img src="./img/morgan1mini.jpg" alt="morgan1mini"></a></div>
-        <div class="box"><a href="./img/morgan2.jpg"><img src="./img/morgan2mini.jpg" alt="morgan2mini"></a></div>
-        <div class="box"><a href="./img/morgan3.jpg"><img src="./img/morgan3mini.jpg" alt="morgan3mini"></a></div>
-        <div class="box"><a href="./img/morgan4.jpg"><img src="./img/morgan4mini.jpg" alt="morgan4mini"></a></div>
-        <div class="box"><a href="./img/morgan5.jpg"><img src="./img/morgan5mini.jpg" alt="morgan5mini"></a></div>
-        <div class="box"><a href="./img/morgan6.jpg"><img src="./img/morgan6mini.jpg" alt="morgan6mini"></a></div>
-        <div class="box"><a href="./img/morgan7.jpg"><img src="./img/morgan7mini.jpg" alt="morgan7mini"></a></div>
-        <div class="box"><a href="./img/morgan8.jpg"><img src="./img/morgan8mini.jpg" alt="morgan8mini"></a></div>
-        <div class="box"><a href="./img/morgan9.jpg"><img src="./img/morgan9mini.jpg" alt="morgan9mini"></a></div>
+        <div class="box"><a href="./img/morgan1.jpg"><img class="img_galerie" src="./img/morgan1mini.jpg" alt="morgan1mini" ></a></div>
+        
+        <div class="box">
+          <a href="./img/morgan2.jpg" id="mf">
+            <img class="img_galerie" src="./img/morgan2mini.jpg" alt="morgan2mini" >
+          </a>
+        </div>
+        
+        <div class="box"><a class="img_galerie" href="./img/morgan3.jpg"><img class="img_galerie" src="./img/morgan3mini.jpg" alt="morgan3mini" ></a></div>
+        <div class="box"><a class="img_galerie" href="./img/morgan4.jpg"><img class="img_galerie" src="./img/morgan4mini.jpg" alt="morgan4mini" ></a></div>
+        <div class="box"><a class="img_galerie" href="./img/morgan5.jpg"><img class="img_galerie" src="./img/morgan5mini.jpg" alt="morgan5mini" ></a></div>
+        <div class="box"><a class="img_galerie" href="./img/morgan6.jpg"><img class="img_galerie" src="./img/morgan6mini.jpg" alt="morgan6mini" ></a></div>
+        <div class="box"><a class="img_galerie" href="./img/morgan7.jpg"><img class="img_galerie" src="./img/morgan7mini.jpg" alt="morgan7mini" ></a></div>
+        <div class="box"><a class="img_galerie" href="./img/morgan8.jpg"><img class="img_galerie" src="./img/morgan8mini.jpg" alt="morgan8mini" ></a></div>
+        <div class="box"><a class="img_galerie" href="./img/morgan9.jpg"><img class="img_galerie" src="./img/morgan9mini.jpg" alt="morgan9mini" ></a></div>
 
       </div>
 </body>
