bandeau du haut refait. bio perso freeman refaite

--- a/index.html
+++ b/index.html
@@ -12,8 +12,30 @@
 
 <body>
   <div class="bandeau">
-    <a href="index.html"><h1>StarBio</h1></a>
-    <div><h2>Découvrez le visage de vos stars favorites</h2></div>
+    <a href="index.html"><h1>STARBIO</h1></a>
+    <h2>Découvrez le visage de vos stars favorites</h2>
+    <nav> <!-- /*menu déroulant*/ -->
+      <ul>
+        <li class="menu-deroulant">
+          <a href="#">Morgan Freeman</a>
+          <ul class="sous-menu">
+            <li><a href="morgan_freeman/bio_perso.html">Biographie personelle</a></li>
+            <li><a href="morgan_freeman/bio_pro.html">Biographie professionnelle</a></li>
+            <li><a href="morgan_freeman/liste_oeuvres.html">Oeuvres </a></li>
+            <li><a href="morgan_freeman/galerie.html">Galerie</a></li>
+          </ul>
+        </li>
+        <li class="menu-deroulant">
+          <a href="#">Melissa</a>
+          <ul class="sous-menu">
+            <li><a href="#">Bio</a></li>
+            <li><a href="#">Vie</a></li>
+          </ul>
+        </li>
+        <!-- <li><a href="#">À propos</a></li>
+        <li><a href="#">Contactez-nous</a></li> -->
+      </ul>
+    </nav>
   </div>
     <!-- <a href="index.html"><h1>StarBio</h1></a>
     <div><h2>Découvrez le visage de vos stars favorites</h2></div> -->
@@ -22,28 +44,7 @@
     <a href="morgan_freeman/liste_oeuvres.html">Ses oeuvres</a>
     <a href="morgan_freeman/galerie.html">Galerie de photos</a> -->
 
-    <nav> <!-- /*menu déroulant*/ -->
-        <ul>
-          <li class="menu-deroulant">
-            <a href="#">Morgan Freeman</a>
-            <ul class="sous-menu">
-              <li><a href="morgan_freeman/bio_perso.html">Biographie personelle</a></li>
-              <li><a href="morgan_freeman/bio_pro.html">Biographie professionnelle</a></li>
-              <li><a href="morgan_freeman/liste_oeuvres.html">Oeuvres </a></li>
-              <li><a href="morgan_freeman/galerie.html">Galerie</a></li>
-            </ul>
-          </li>
-          <li class="menu-deroulant">
-            <a href="#">Melissa</a>
-            <ul class="sous-menu">
-              <li><a href="#">Bio</a></li>
-              <li><a href="#">Vie</a></li>
-            </ul>
-          </li>
-          <!-- <li><a href="#">À propos</a></li>
-          <li><a href="#">Contactez-nous</a></li> -->
-        </ul>
-      </nav>
+    
 
 </body>
 </html>
