arrangement de la page bio pro morgan

--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 
 <body>
   <div class="bandeau">
-    <a href="index.html"><h1>STARBIO</h1></a>
+    <a class="lien_menu" href="index.html"><h1>STARBIO</h1></a>
     <h2>Découvrez le visage de vos stars favorites</h2>
     <nav> <!-- /*menu déroulant*/ -->
       <ul>
         <li class="menu-deroulant">
           <a href="#">Morgan Freeman</a>
           <ul class="sous-menu">
-            <li><a href="morgan_freeman/bio_perso.html">Biographie personelle</a></li>
-            <li><a href="morgan_freeman/bio_pro.html">Biographie professionnelle</a></li>
-            <li><a href="morgan_freeman/liste_oeuvres.html">Oeuvres </a></li>
-            <li><a href="morgan_freeman/galerie.html">Galerie</a></li>
+            <li><a class="lien_menu" href="morgan_freeman/bio_perso.html">Biographie personelle</a></li>
+            <li><a class="lien_menu" href="morgan_freeman/bio_pro.html">Biographie professionnelle</a></li>
+            <li><a class="lien_menu" href="morgan_freeman/liste_oeuvres.html">Oeuvres </a></li>
+            <li><a class="lien_menu" href="morgan_freeman/galerie.html">Galerie</a></li>
           </ul>
         </li>
         <li class="menu-deroulant">
-          <a href="#">Melissa</a>
+          <a class="lien_menu" href="#">Melissa</a>
           <ul class="sous-menu">
-            <li><a href="#">Bio</a></li>
-            <li><a href="#">Vie</a></li>
+            <li><a class="lien_menu" href="#">Bio</a></li>
+            <li><a class="lien_menu" href="#">Vie</a></li>
           </ul>
         </li>
         <!-- <li><a href="#">À propos</a></li>
