--- a/morgan_freeman/liste_oeuvres.html
+++ b/morgan_freeman/liste_oeuvres.html
@@ -11,24 +11,24 @@
 </head>
 <body>
     <div class="bandeau">
-        <a href="../index.html"><h1>STARBIO</h1></a>
-        <div><h2>Oeuvres</h2></div>
+        <a class="lien_menu" href="../index.html"><h1>STARBIO</h1></a>
+        <div><h2>Biographie personelle</h2></div>
         <nav> <!-- /*menu déroulant*/ -->
           <ul>
             <li class="menu-deroulant">
               <a href="#">Morgan Freeman</a>
               <ul class="sous-menu">
-                <li><a href="bio_perso.html">Biographie personelle</a></li>
-                <li><a href="bio_pro.html">Biographie professionnelle</a></li>
-                <li><a href="liste_oeuvres.html">Oeuvres </a></li>
-                <li><a href="galerie.html">Galerie</a></li>
+                <li><a class="lien_menu" href="bio_perso.html">Biographie personelle</a></li>
+                <li><a class="lien_menu" href="bio_pro.html">Biographie professionnelle</a></li>
+                <li><a class="lien_menu" href="liste_oeuvres.html">Oeuvres </a></li>
+                <li><a class="lien_menu" href="galerie.html">Galerie</a></li>
               </ul>
             </li>
             <li class="menu-deroulant">
-              <a href="#">Melissa</a>
+              <a class="lien_menu" href="#">Melissa</a>
               <ul class="sous-menu">
-                <li><a href="#">Bio</a></li>
-                <li><a href="#">Vie</a></li>
+                <li><a class="lien_menu" href="#">Bio</a></li>
+                <li><a class="lien_menu" href="#">Vie</a></li>
               </ul>
             </li>
           </ul>
