arrangement de chaque partie et modification de la galerie. j'ai tout refait. quelques bugs encore à corriger dans la galerie. je n'ai pas réussi à mettre le menu top en mode fixed

--- a/morgan_freeman/galerie.html
+++ b/morgan_freeman/galerie.html
@@ -9,10 +9,13 @@
     <title>Galerie</title>
 
 </head>
+
+
+
 <body>
   <div class="bandeau">
     <a class="lien_menu" href="../index.html"><h1>STARBIO</h1></a>
-    <div><h2>Biographie personelle</h2></div>
+    <div><h2>Galerie</h2></div>
     <nav> <!-- /*menu déroulant*/ -->
       <ul>
         <li class="menu-deroulant">
@@ -35,30 +38,22 @@
     </nav>
   </div>
 
-    <!-- <a href="bio_perso.html">Biographie personelle</a>
-    <a href="bio_pro.html">Biographie professionnelle</a>
-    <a href="liste_oeuvres.html">Ses oeuvres</a>
-    <a href="galerie.html">Galerie de photos</a> -->
-
-
-      <!-- galerie photos -->
-      <div class="game-board">
-        <div class="box"><a href="./img/morgan1.jpg"><img class="img_galerie" src="./img/morgan1mini.jpg" alt="morgan1mini" ></a></div>
-        
-        <div class="box">
-          <a href="./img/morgan2.jpg" id="mf">
-            <img class="img_galerie" src="./img/morgan2mini.jpg" alt="morgan2mini" >
-          </a>
-        </div>
-        
-        <div class="box"><a class="img_galerie" href="./img/morgan3.jpg"><img class="img_galerie" src="./img/morgan3mini.jpg" alt="morgan3mini" ></a></div>
-        <div class="box"><a class="img_galerie" href="./img/morgan4.jpg"><img class="img_galerie" src="./img/morgan4mini.jpg" alt="morgan4mini" ></a></div>
-        <div class="box"><a class="img_galerie" href="./img/morgan5.jpg"><img class="img_galerie" src="./img/morgan5mini.jpg" alt="morgan5mini" ></a></div>
-        <div class="box"><a class="img_galerie" href="./img/morgan6.jpg"><img class="img_galerie" src="./img/morgan6mini.jpg" alt="morgan6mini" ></a></div>
-        <div class="box"><a class="img_galerie" href="./img/morgan7.jpg"><img class="img_galerie" src="./img/morgan7mini.jpg" alt="morgan7mini" ></a></div>
-        <div class="box"><a class="img_galerie" href="./img/morgan8.jpg"><img class="img_galerie" src="./img/morgan8mini.jpg" alt="morgan8mini" ></a></div>
-        <div class="box"><a class="img_galerie" href="./img/morgan9.jpg"><img class="img_galerie" src="./img/morgan9mini.jpg" alt="morgan9mini" ></a></div>
-
-      </div>
+  <table class="galerie_photos">
+        <tr>
+          <td class="ligne_galerie"><a class="img_galerie" href="./img/morgan3.jpg"><img class="img_galerie" src="./img/morgan3mini.jpg" alt="morgan3mini"></td>
+          <td class="ligne_galerie"> <a class="img_galerie" href="./img/morgan4.jpg"><img class="img_galerie" src="./img/morgan4mini.jpg" alt="morgan4mini" > </td>
+          <td class="ligne_galerie"> <a class="img_galerie" href="./img/morgan5.jpg"><img class="img_galerie" src="./img/morgan5mini.jpg" alt="morgan5mini" > </td>
+        </tr>
+        <tr>
+          <td class="ligne_galerie"> <a class="img_galerie" href="./img/morgan8.jpg"><img class="img_galerie" src="./img/morgan8mini.jpg" alt="morgan8mini" ></td>
+          <td class="ligne_galerie"> <a class="img_galerie" href="./img/morgan7.jpg"><img class="img_galerie" src="./img/morgan7mini.jpg" alt="morgan7mini" > </td>
+              <td class="ligne_galerie"> <a class="img_galerie" href="./img/morgan6.jpg"><img class="img_galerie" src="./img/morgan6mini.jpg" alt="morgan6mini" ></td>
+        </tr>
+        <tr>
+          <td class="ligne_galerie"><a class="img_galerie" href="./img/morgan9.jpg"><img class="img_galerie" src="./img/morgan9mini.jpg" alt="morgan9mini" ></td>
+          <td class="ligne_galerie"> <a href="./img/morgan1.jpg"><img class="img_galerie" src="./img/morgan1mini.jpg" alt="morgan1mini" ></a> </td>  
+          <td class="ligne_galerie"> <a href="./img/morgan2.jpg" id="mf"><img class="img_galerie" src="./img/morgan2mini.jpg" alt="morgan2mini" ></td>  
+        </tr>
+  </table>
 </body>
 </html>
