lien entre les pages de mélissa et de aug

--- a/pierre_niney/liste_oeuvres.html
+++ b/pierre_niney/liste_oeuvres.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title> Les oeuvres de Pierre Niney</title>
-    <link rel="stylesheet" href="morgan_freeman/style.css" type="text/css" media="screen" > <!-- à changer -->
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 </head>
 
 <body>
-	<h1> Les Oeuvres de Pierre Niney </h1>
+	<div class="bandeau">
+		<a class="lien_menu" href="../index.html">
+			<h1> STARBIO </h1>
+		</a>
+		<div>
+			<h2> Les oeuvres de Pierre Niney</h2>
+		</div>
+		<nav> <!-- /*menu déroulant*/ -->
+			<ul>
+				<li class="menu-deroulant">
+				<a href="#">Morgan Freeman</a>
+				<ul class="sous-menu">
+					<li><a class="lien_menu" href="../morgan_freeman/bio_perso.html">Biographie personelle</a></li>
+					<li><a class="lien_menu" href="../morgan_freeman/bio_pro.html">Biographie professionnelle</a></li>
+					<li><a class="lien_menu" href="../morgan_freeman/liste_oeuvres.html">Oeuvres </a></li>
+					<li><a class="lien_menu" href="../morgan_freeman/galerie.html">Galerie</a></li>
+				</ul>
+				</li>
+				<li class="menu-deroulant">
+				<a class="lien_menu" href="#">Pierre Niney</a>
+				<ul class="sous-menu">
+					<li><a class="lien_menu" href="bio_perso_p.html">Biographie personnelle</a></li>
+					<li><a class="lien_menu" href="bio_pro_p.html"> Biographie professionnelle</a></li>
+					<li><a class="lien_menu" href="liste_oeuvres.html"> Oeuvres </a></li>
+				</ul>
+				</li>
+			</ul>
+		</nav>
+	</div>
 	
+	<div class = "container">
 	<h2> Récompenses </h2>
 	<table>	
 		<tr>
@@ -31,7 +62,7 @@
 	</table>
 	
 	
-	
+	<div class="liste_oeuvres">
 	<h2> Filmographie </h2>
 	<p> Liste des films sortis entre 2012 et 2021 dans lesquels Pierre Niney a un rôle. </p>
 	<ul>
@@ -50,5 +81,7 @@
 		<li> 2020 : Boîte noire de Yann Gozlan : Mathieu Vasseur </li>
 		<li> 2021 : OSS 117 : Alerte rouge en Afrique noire de Nicolas Bedos </li>
 	</ul>
+	</div>
+	</div>
 </body>
 </html>
