--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
       </ul>
     </nav>
   </div>
-    <!-- <a href="index.html"><h1>StarBio</h1></a>
-    <div><h2>Découvrez le visage de vos stars favorites</h2></div> -->
-    <!-- <a href="morgan_freeman/bio_perso.html">Biographie personelle</a>
-    <a href="morgan_freeman/bio_pro.html">Biographie professionnelle</a>
-    <a href="morgan_freeman/liste_oeuvres.html">Ses oeuvres</a>
-    <a href="morgan_freeman/galerie.html">Galerie de photos</a> -->
 
-    
+  <div>
+    <p>
+      Bienvenue sur notre site. <br>
+      Les auteurs sont Augustin Hannebert pour la page de morgan Freeman et Mélissa Pulci poour la page de Pierre Niney
+    </p>
+  </div>
 
 </body>
 </html>
