photo de pierre niney

--- a/pierre_niney/liste_oeuvres.html
+++ b/pierre_niney/liste_oeuvres.html
@@ -38,6 +38,8 @@
 			</ul>
 		</nav>
 	</div>
+
+	
 	
 	<div class = "container">
 	<h2> Récompenses </h2>
@@ -60,7 +62,12 @@
 			<td> Globes de Cristal du meilleur acteur </td>
 		</tr>
 	</table>
-	
+
+
+	<img src="3.jpg"
+	width = "350"
+	style="margin-left : 300px;"
+	>
 	
 	<div class="liste_oeuvres">
 	<h2> Filmographie </h2>
