--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div>
     <p>
       Bienvenue sur notre site. <br>
-      Les auteurs sont Augustin Hannebert pour la page de morgan Freeman et Mélissa Pulci poour la page de Pierre Niney
+      Les auteurs sont Augustin Hannebert pour la page de Morgan Freeman et Mélissa Pulci 21902303 pour la page de Pierre Niney.
     </p>
   </div>
 
