--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
     </nav>
   </div>
 
-  <div>
-    <p>
+  <div class="container">    <p>
       Bienvenue sur notre site. <br>
-      Les auteurs sont Augustin Hannebert pour la page de morgan Freeman et Mélissa Pulci poour la page de Pierre Niney
+      Les auteurs sont Augustin Hannebert pour la page de morgan Freeman et Mélissa Pulci pour la page de Pierre Niney
     </p>
   </div>
 
