ajout num étu AH

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="container">    
     <p>
       Bienvenue sur notre site. <br>
-      Les auteurs sont Augustin Hannebert pour la page de Morgan Freeman et Mélissa Pulci 21902303 pour la page de Pierre Niney.    
+      Les auteurs sont Augustin Hannebert n°21901130 pour la page de Morgan Freeman et Mélissa Pulci n°21902303 pour la page de Pierre Niney.    
     </p>
   </div>
 
